--- a/css/loginpage.css
+++ b/css/loginpage.css
@@ -32,41 +32,37 @@ input {
     border-radius: 15px;
 }
 
-.signupbutton {
+/* .signupbutton {
     margin-top: 20px;
     width: 100%;
 
-}
+} */
 
-.button {
+button {
+    border: 0px;
     width: 61%;
     margin-left: 20%;
-    list-style-type: none;
     padding: 0px;
-    font-size: 23px;
-    text-align: center;
-    font-weight: 600;
-}
+    cursor: pointer;
+} 
 
 .signup {
     border-radius: 10px;
     padding: 10px;
-    color: #4F5665;
+    color: #6A4029;
+    font-size: 20px;
+    font-weight: bold;
     box-shadow: 5px 5px 10px #CCCCCC;
     background-color: #ffba33;
 }
 
 .google {
-    margin-top: 5px;
+    margin-top: 8px;
+    font-size: 18px;
+    font-weight: bold;
     border-radius: 10px;
     padding: 10px;
     padding-left: 20px;
     background-color: white;
     box-shadow: 1px 5px 10px #CCCCCC;
-}
-
-a {
-    margin-left: 3px;
-    text-decoration: none;
-    color: black;
 }
