--- a/css/navbarsearch.css
+++ b/css/navbarsearch.css
@@ -1,7 +1,12 @@
+@font-face {
+    font-family: rubik;
+    src: url(../font/Rubik.ttf);
+}
+
 body {
     margin: 0px;
     padding: 0px;
-    font-family: sans-serif;
+    font-family: rubik;
 }
 
 .container {
@@ -48,28 +53,49 @@ body {
     font-weight: 700;
 }
 
-.secondary-menu {
+.secondary-menu{  
     width: 30%;
-}
-
-.secondary-menu .menu {
     display: flex;
-    list-style-type: none;
-}
-
-.secondary-menu .menu li {
-    margin: 15px;
+    justify-content: flex-start;
+    align-items: center;
     cursor: pointer;
 }
-
-.image {
+.secondary-menu input{
+    width: 150px;
+    border-radius: 10px;
+    border: 1px solid #4F5665;
+    padding: 5px 10px;
+    margin: 15px;
+}
+.secondary-menu .chat{
+    position: relative;
+    margin: 15px;
+}
+.secondary-menu .chat .notif{
+    position: absolute;
+    height: 15px;
+    width: 15px;
+    text-align: center;
+    font-size: 13px;
+    font-weight: 600;
+    bottom: 20px;
+    right: 13px;
+    background-color: #6A4029;
+    border-radius: 100px;
+    color: white;
+}
+.secondary-menu .chat img{
+    width: 22px;
+    height: 23px;
+}
+.secondary-menu .image{
+    margin: 15px;
     width: 23px;
     height: 23px;
     overflow: hidden;
     border-radius: 50%;
 }
-
-.image img {
+.secondary-menu .image img{
     width: 100%;
     height: auto;
     margin-top: -5px;
