--- a/css/product.css
+++ b/css/product.css
@@ -1,7 +1,12 @@
+@font-face {
+    font-family: rubik;
+    src: url(../font/Rubik.ttf);
+}
+
 .row {
     display: flex;
     justify-content: center;
-    font-family: sans-serif;
+    font-family: rubik;
 }
 
 .product {
@@ -25,10 +30,11 @@
     border-radius: 100px;
 }
 
-h1 {
+h1 { 
     margin-top: 110px;
     font-size: 20px;
     font-weight: 700;
+    height: 30px;
 }
 
 h2 {
